--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -598,6 +598,7 @@ p {
 
 .stats .row-qty2 {
     justify-content: space-between;
+    align-items:start;
     margin-top: 50px;
     padding: 0 32px;
 }
@@ -614,11 +615,12 @@ p {
 }
 
 .stats .qty-item1 {
-    width: 30%;
+    width: 80%;
 }
 
 .stats .qty-desc {
     margin-top: 24px;
+    margin-bottom: 24px;
     font-weight: 500;
     font-size: 1.8rem;
     color: #7b8087;
